[gd_scene load_steps=11 format=3 uid="uid://bang5x2fmjbqa"]

[ext_resource type="Script" path="res://bubble.gd" id="1_jpstm"]
[ext_resource type="Shader" path="res://Bubble.gdshader" id="1_pdbst"]
[ext_resource type="Texture2D" uid="uid://dp1nc0kj3c6rh" path="res://assets/booble.png" id="2_26vjr"]
[ext_resource type="FontFile" uid="uid://c5tfxaby7jjp4" path="res://Pixel-UniCode.ttf" id="4_c8etj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8mya4"]
shader = ExtResource("1_pdbst")
shader_parameter/circle_color = Color(0.3, 0.5, 1, 0.7)
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_width = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_45lyi"]
radius = 203.06

[sub_resource type="CircleShape2D" id="CircleShape2D_lh441"]
radius = 256.0

[sub_resource type="Animation" id="Animation_qocut"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BubbleSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_1h1he"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BubbleSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uonsx"]
_data = {
"RESET": SubResource("Animation_1h1he"),
"spin": SubResource("Animation_qocut")
}

[node name="Bubble" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_jpstm")

[node name="BubbleSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(2, 2, 2, 1)
material = SubResource("ShaderMaterial_8mya4")
texture = ExtResource("2_26vjr")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_45lyi")

[node name="SuckArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="SuckCollision" type="CollisionShape2D" parent="SuckArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_lh441")
debug_color = Color(0.871736, 0.209851, 0.6922, 0.42)

[node name="BubbleCenter" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="BlowUpTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="GoLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -320.0
offset_top = -404.0
offset_right = 867.0
offset_bottom = 386.0
theme_override_colors/default_color = Color(0.615686, 0.517647, 0.85098, 1)
theme_override_fonts/normal_font = ExtResource("4_c8etj")
theme_override_font_sizes/normal_font_size = 350
bbcode_enabled = true
text = "[wave amp=50.0 freq=5.0 connected=1]MASH SPACE[/wave]"
fit_content = true
scroll_active = false

[node name="WhatToDoLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -747.0
offset_top = -404.0
offset_right = 867.0
offset_bottom = 386.0
theme_override_colors/default_color = Color(0.615686, 0.517647, 0.85098, 1)
theme_override_fonts/normal_font = ExtResource("4_c8etj")
theme_override_font_sizes/normal_font_size = 350
bbcode_enabled = true
text = "[center][wave amp=50.0 freq=5.0 connected=1]USE < AND > TO STEER[/wave][/center]"
fit_content = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uonsx")
}
autoplay = "spin"

[connection signal="area_entered" from="SuckArea" to="." method="_on_suck_area_area_entered"]
